[package]
name = "kafka_clone"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "producer"
path = "src/producer/main.rs"

[[bin]]
name = "consumer"
path = "src/consumer/main.rs"

[[bin]]
name = "broker"
path = "src/broker/main.rs"

[dependencies]
tonic = "0.9.1"
tokio = { version = "1.27.0", features = ["macros", "rt-multi-thread"] }
prost = "0.11.8"
prost-types = "0.11.8"
chrono = "0.4.24"
rand = "0.8.4"

[build-dependencies]
tonic-build = "0.9.1"
protoc = "2.28.0" 
